# omarchy-chess-screensaver

./: .gitignore  LICENSE  README.md  install.sh  plan.md  pyproject.toml  uninstall.sh
src/chess_screensaver/: __main__.py  animation.py  board.py  game_loader.py  layout.py  renderer.py
