[project]
name = "chess-screensaver"
version = "0.1.0"
description = "A chess screensaver for Omarchy"
requires-python = ">=3.10"
dependencies = [
    "chess>=1.10",
]

[project.scripts]
omarchy-chess-screensaver = "chess_screensaver.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chess_screensaver"]
